[package]
name = "gfx_tablet_r"
version = "0.1.0"
authors = ["gm3k4g <thingstuffet@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
enigo = "0.0.14"
winit = "0.24.0"
tokio = { version = "1", features = ["full"] }